src/objects/c2g__DataViewAction__c.object
<CustomObject>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>c2g__ApexClass__c</fullName>
        <label>Apex Class</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Dataview__c</fullName>
        <label>Dataview</label>
        <referenceTo>c2g__DataView__c</referenceTo>
        <relationshipLabel>Dataview Actions</relationshipLabel>
        <relationshipName>DataviewActions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Parameter__c</fullName>
        <label>Parameter</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>zDeprecated:Dataview Action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dataview Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>